<resources>
    <string name="app_name">摸鱼</string>
    <string name="app_author">\@<a href='https://github.com/xalanq'>xalanq</a>\ \ \ \@<a href='https://github.com/Konano'>Konano</a></string>

    <string name="main_navigation_login">登录</string>
    <string name="main_navigation_drawer_open">打开菜单</string>
    <string name="main_navigation_drawer_close">关闭菜单</string>
    <string name="main_navigation_menu_index">首页</string>
    <string name="main_navigation_menu_favorite">收藏</string>
    <string name="main_navigation_menu_history">历史</string>
    <string name="main_navigation_menu_night_mode">夜间模式</string>
    <string name="main_navigation_menu_clear_cache">清除缓存</string>
    <string name="main_navigation_menu_about">关于</string>

    <string name="index_fragment_title">首页</string>
    <string name="favorite_fragment_title">收藏</string>
    <string name="history_fragment_title">历史</string>
    <string name="setting_fragment_title">设置</string>
    <string name="about_fragment_title">关于</string>

    <string name="about_update">检查更新</string>
    <string name="about_feedback">反馈问题</string>

    <string name="default_news_title">这是标题</string>
    <string name="default_news_publisher">发布者</string>
    <string name="default_news_comment_count">%d评</string>
    <string name="default_news_time">刚刚</string>
    <string name="default_category">这是分类</string>
    <string name="default_content">这是内容</string>

    <string name="time_error">时间错误</string>
    <string name="time_recent">刚刚</string>
    <string name="time_minute">%d分钟前</string>
    <string name="time_hour">%d小时前</string>
    <string name="time_last_day">昨天</string>
    <string name="time_last_last_day">前天</string>
    <string name="time_day">%d天前</string>
    <string name="time_week">%d周前</string>
    <string name="time_month">%d月前</string>
    <string name="time_year">%d年前</string>

    <string name="default_search_hint">搜索</string>

    <string name="search_hot">摸鱼热搜</string>
    <string name="search_history">搜索历史</string>
    <string name="search_clear_history">清空搜索历史</string>
    <string name="search_clear_history_confirm">你确定要清空吗？</string>

    <string name="category_current">当前分类</string>
    <string name="category_current_hint">点击进入分类</string>
    <string name="category_remain">可选分类</string>
    <string name="category_remain_hint">点击加入到当前分类</string>
    <string name="category">分类列表</string>

    <string name="news_cover">新闻封面</string>

    <string name="edit">编辑</string>
    <string name="complete">完成</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="more">更多</string>
    <string name="loading">加载中</string>
    <string name="no_empty">输入不能为空</string>
    <string name="check_exit">再按一次返回键退出</string>
    <string name="error">错误</string>
    <string name="search">搜索</string>
    <string name="favorite">收藏</string>
    <string name="share">分享</string>
    <string name="recommend">推荐</string>
    <string name="timeout">请求超时</string>
    <string name="unknown_error">未知错误，是不是没联网？</string>
    <string name="empty">~ 啥也没有呢 ~</string>
    <string name="retry">重试刷新</string>

    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="password_confirm">密码确认</string>
    <string name="email">邮箱</string>
    <string name="avatar">头像链接</string>
    <string name="login">登录</string>
    <string name="login_loading">登录中</string>
    <string name="login_success">登录成功</string>
    <string name="register_hint">还没账户？注册一个</string>
    <string name="register">注册</string>
    <string name="register_loading">注册中</string>
    <string name="register_success">注册成功</string>
    <string name="error_confirm">两次输入的密码不一致</string>
    <string name="user_setting">用户设置</string>
    <string name="update">更新</string>
    <string name="logout">注销</string>
    <string name="logout_success">已注销</string>

    <string name="cache_title">清除缓存</string>
    <string name="cache_calculate">正在计算中</string>
    <string name="cache_error">发生了错误</string>
    <string name="cache_done">清理完成</string>
    <string name="cache_content">缓存大小 %s，你确定要清除吗？</string>

    <string name="gallery_hint">&lt;- 滑动可查看多张图片 -&gt;</string>

    <string name="clear_all">清空</string>
    <string name="clear_all_confirm_title">清空全部</string>
    <string name="clear_all_confirm_content">你确定要这样做吗？</string>
    <string name="slide_delete">滑动删除哦</string>

    <string name="no_more_data">没有更多的数据啦</string>
    <string name="load_timeout">加载超时啦</string>
    <string name="load_error">加载出错啦，是不是没网？</string>
    <string name="switch_local">切换回本地模式</string>
</resources>
