<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="locale">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorBackground"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:paddingTop="16dp">

        <ImageButton
            android:id="@+id/category_close"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center_vertical"
            android:background="?attr/colorBackground"
            android:src="@drawable/ic_close" />

        <TextView
            style="@style/Base.DialogWindowTitle.AppCompat"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingStart="0dp"
            android:paddingEnd="28dp"
            android:text="@string/category"
            android:textColor="?attr/colorText"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/category_current"
                    android:textColor="?attr/colorTitle"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/category_current_hint"
                    android:textColor="?attr/colorSubtitle"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/category_edit_current"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:text="@string/edit"
                    android:textColor="?attr/colorTextButton"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/category_current_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="locale"
                android:nestedScrollingEnabled="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingTop="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/category_remain"
                    android:textColor="?attr/colorTitle"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="0dp"
                    android:gravity="center_vertical"
                    android:text="@string/category_remain_hint"
                    android:textColor="?attr/colorSubtitle"
                    android:textSize="12sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/category_remain_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="locale"
                android:nestedScrollingEnabled="false" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
