<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/news_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground"
    android:focusable="true"
    android:clickable="true"
    android:paddingHorizontal="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/default_news_title"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toStartOf="@+id/image_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_marginVertical="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="1">

        <TextView
            android:id="@+id/publisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/default_news_publisher"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/comment_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="18dp"
            android:gravity="start"
            android:text="@string/default_news_comment_count"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/publish_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="18dp"
            android:gravity="start"
            android:text="@string/default_news_time"
            android:textSize="12sp"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/image_card"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        app:cardElevation="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_thumb"
            android:layout_width="116dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"/>

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/divider"
        android:background="?android:attr/listDivider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
